# fastapi-instagram-clone

./: .gitignore  .pre-commit-config.yaml  README.md  blog_api.db  justfile  main.py  main_ocr.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
src/blog/: main.py
src/blog/database/: database.py  db_post.py  models.py
src/blog/routers/: post.py  schemas.py
src/fastapi_instagram_clone/: custom_log.py  exceptions.py  main.py  types.py
src/fastapi_instagram_clone/auth/: authentication.py  oauth2.py
src/fastapi_instagram_clone/db/: common.py  database.py  db_article.py  db_user.py  hash.py  models.py  schemas.py
src/fastapi_instagram_clone/router/: article.py  blog_get.py  blog_post.py  dependencies.py  file.py  product.py  user.py
src/fastapi_instagram_clone/templates/: templates.py
src/ocr/: main.py
src/tests/: test_main.py
templates/static/: styles.css
