#### black ####################################################################
[tool.black]
line-length = 80
skip-magic-trailing-comma = true
target-version = ["py39"]

#### coverage #################################################################
[tool.coverage.run]
branch = true
data_file = ".coverage/data"
parallel = true

[tool.coverage.report]
fail_under = 100.0
skip_covered = true
skip_empty = true

[tool.coverage.html]
directory = ".coverage/html"

#### hatch ####################################################################
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_instagram_clone"]

[tool.hatch.version]
path = "src/fastapi_instagram_clone/__init__.py"

#### isort ####################################################################
[tool.isort]
atomic = true
case_sensitive = true
float_to_top = true
force_single_line = true
line_length = 80
lines_after_imports = 2
profile = "black"
remove_redundant_aliases = true
skip_gitignore = true

#### nitpick ##################################################################
[tool.nitpick]
style = [
  "https://raw.githubusercontent.com/dycw/nitpick/master/styles/common.toml",
  "https://raw.githubusercontent.com/dycw/nitpick/master/styles/3.9.toml",
  "https://raw.githubusercontent.com/dycw/nitpick/master/styles/pip-compile-no-hashes.toml",
]

#### project ##################################################################
[project]
name = "fastapi-instagram-clone"
dynamic = ["version"]
readme = "README.md"
requires-python = ">= 3.9"
authors = [{ name = "Derek Wan", email = "d.wan@icloud.com" }]
dependencies = [
  "aiofiles >= 22.1.0",
  "bcrypt >= 4.0.0",
  "beartype >= 0.11.0",
  "fastapi >= 0.85.0",
  "passlib >= 1.7.4",
  "python-jose >= 3.3.0",
  "python-multipart >= 0.0.5",
  "requests >= 2.28.1",
  "sqlalchemy >= 1.4.41",
  "sqlalchemy2-stubs",
  "strenum >= 0.4.8",
  "uvicorn >= 0.18.3",
]

[project.optional-dependencies]
dev = [
  "black",
  "bump2version",
  "flake8",
  "flake8-absolute-import",
  "flake8-annotations",
  "flake8-bandit",
  "flake8-bugbear",
  "flake8-comprehensions",
  "flake8-debugger",
  "flake8-eradicate",
  "flake8-executable",
  "flake8-no-pep420",
  "flake8-pie",
  "flake8-print",
  "flake8-simplify",
  "flake8-unused-arguments",
  "hatch",
  "isort",
  "pip-tools",
  "pytest",
  "pytest-cov",
  "pytest-xdist",
]

#### pyright ##################################################################
[tool.pyright]
include = ["src"]
pythonVersion = "3.9"
executionEnvironments = [{ root = "src" }]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportMissingTypeArgument = false
reportPrivateUsage = false
reportPrivateImportUsage = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUntypedBaseClass = false
reportImplicitStringConcatenation = "error"
reportMissingSuperCall = "error"
reportPropertyTypeMismatch = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnusedCallResult = "error"

#### pytest ###################################################################
[tool.pytest.ini_options]
addopts = [
  "-rsxX",
  "--color=auto",
  "--cov=fastapi_instagram_clone",
  "--cov-config=pyproject.toml",
  "--cov-report=html",
  "--strict-markers",
  "--tb=native"
]
filterwarnings = ["error"]
looponfailroots = ["src"]
minversion = "7.0"
testpaths = ["src/tests"]
xfail_strict = true
